[project]
name = "research"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.1",
    "pandas>=1.5.2",
    "matplotlib>=3.7.0",
    "scipy",
    "pymupdf>=1.24.0",       # provides the fitz module for PDF reading
    "pytest>=8.1.1",
    "black>=24.1.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
    "ipython",
    "ipykernel",
    "jupyter",
    "notebook",
]

# Add packages here as needed, then run: uv sync
# For dev tools: uv sync --extra dev
